force-app/main/default/objects/DDRL_Action_Button__c/DDRL_Action_Button__c.object-meta.xml
<CustomObject>
    <label>DDRL Action Button</label>
    <nameField>
        <label>Action Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DDRL Action Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>