force-app/main/default/objects/DDRL_Action_Button__c/fields/configId__c.field-meta.xml
<CustomField>
    <fullName>configId__c</fullName>
    <label>DDRL Config</label>
    <referenceTo>DDRL_Config__c</referenceTo>
    <relationshipLabel>DDRL Action Buttons</relationshipLabel>
    <relationshipName>DCRL_Action_Buttons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>