force-app/main/default/objects/DDRL_Action_Button__c/fields/horizontalPadding__c.field-meta.xml
<CustomField>
    <fullName>horizontalPadding__c</fullName>
    <label>Horizontal Padding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>XXX-Small</fullName>
            </value>
            <value>
                <fullName>XX-Small</fullName>
            </value>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>XX-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>