force-app/main/default/objects/DDRL_Action_Button__c/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <label>Button Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>