force-app/main/default/objects/DDRL_Action_Button__c/fields/showIcon__c.field-meta.xml
<CustomField>
    <fullName>showIcon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Icon</label>
    <type>Checkbox</type>
</CustomField>