force-app/main/default/objects/DDRL_Action_Button__c/fields/tabIndex__c.field-meta.xml
<CustomField>
    <fullName>tabIndex__c</fullName>
    <label>Tab Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>