force-app/main/default/objects/DDRL_Action_Button__c/fields/variant__c.field-meta.xml
<CustomField>
    <fullName>variant__c</fullName>
    <label>Button Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Outline-Brand</fullName>
            </value>
            <value>
                <fullName>Inverse</fullName>
            </value>
            <value>
                <fullName>Destructive</fullName>
            </value>
            <value>
                <fullName>Text-Destructive</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>